# charmlibs

./: .gitignore  CONTRIBUTING.md
.docs/: conf.py  tutorial.md
.github/workflows/: ci.yaml  publish.yaml
interfaces/certificate_transfer/: CHANGELOG.md  pyproject.toml
interfaces/certificate_transfer/src/charmlibs/interfaces/certificate_transfer/: _certificate_transfer.py  _version.py
interfaces/certificate_transfer/tests/unit/: test_certificate_transfer_requires_v1.py
interfaces/otlp/: CHANGELOG.md  README.md  pyproject.toml
interfaces/otlp/src/charmlibs/interfaces/otlp/: __init__.py  _otlp.py
interfaces/otlp/src/charmlibs/otlp/: __init__.py  _otlp.py
interfaces/otlp/tests/unit/: conftest.py  test_endpoints.py  test_rules.py
interfaces/tls-certificates/: CHANGELOG.md
interfaces/tls-certificates/src/charmlibs/interfaces/tls_certificates/: __init__.py  _tls_certificates.py  _version.py
interfaces/tls-certificates/tests/integration/: test_tls_certificates.py
interfaces/tls-certificates/tests/integration/charms/requirer/: charm.py  charmcraft.yaml
interfaces/tls-certificates/tests/unit/: test_requires.py
interfaces/tls-certificates/tests/unit/dummy_requirer_charm/: charmcraft.yaml
interfaces/tls-certificates/tests/unit/dummy_requirer_charm/src/: charm.py
nginx_k8s/: CHANGELOG.md
nginx_k8s/src/charmlibs/nginx_k8s/: __init__.py  _tls_config.py
otlp/: README.md  pyproject.toml
otlp/src/charmlibs/otlp/: __init__.py  _otlp.py  _version.py
otlp/tests/functional/: conftest.py  test_version.py
otlp/tests/integration/: conftest.py  pack.sh  test_version.py
otlp/tests/integration/charms/: actions.yaml  common.py  pyproject.toml
otlp/tests/integration/charms/k8s/: charmcraft.yaml
otlp/tests/integration/charms/k8s/src/: charm.py
otlp/tests/integration/charms/machine/: charmcraft.yaml
otlp/tests/integration/charms/machine/src/: charm.py
otlp/tests/unit/: conftest.py  helpers.py  test_alert_rules.py  test_endpoints.py  test_otlp.py  test_otlp_alert_rules.py  test_rules.py  test_version.py  test_version_in_charm.py
