[project]
name = "charmlibs-interfaces-certificate_transfer"
description = "The charmlibs.interfaces.certificate_transfer package."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="The TLS team at Canonical"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    "ops",
    "pydantic",
]

[dependency-groups]
lint = [  # installed for `just lint interfaces/certificate_transfer` (unit, functional, and integration are also installed)
]
unit = [  # installed for `just unit interfaces/certificate_transfer`
    "ops[testing]",
    "pytest"
]
functional = [  # installed for `just functional interfaces/certificate_transfer`
]
integration = [  # installed for `just integration interfaces/certificate_transfer`
]

[project.urls]
"Repository" = "https://github.com/canonical/charmlibs"
"Issues" = "https://github.com/canonical/charmlibs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charmlibs"]

[tool.hatch.version]
path = "src/charmlibs/interfaces/certificate_transfer/_version.py"

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src", "tests/unit", "tests/functional", "tests/integration"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.extend-per-file-ignores]
"./**/schema.py" = [
    "CPY",  # copyright
    "D",  # docs
    "E501",  # line too long
]
"tests/**/*" = [
    "E501",
]

[tool.pyright]
extends = "../../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "3.10"

[tool.charmlibs.functional]
ubuntu = []  # ubuntu versions to run functional tests with, e.g. "24.04" (defaults to just "latest")
pebble = []  # pebble versions to run functional tests with, e.g. "v1.0.0", "master" (defaults to no pebble versions)
sudo = false  # whether to run functional tests with sudo (defaults to false)

[tool.charmlibs.integration]
# tags to run integration tests with (defaults to running once with no tag, i.e. tags = [''])
# Available in CI in tests/integration/pack.sh and integration tests as CHARMLIBS_TAG
tags = []  # Not used by the pack.sh and integration tests generated by the template

[tool.ty.rules]
invalid-key = "warn"
